--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1430,3 +1430,40 @@ year = {2006}
   editor =      "John P. McDermott",
   pages =       "308--314",
 }
+
+@article{Ferrari2015181,
+title = "Clustering algorithm selection by meta-learning systems: A new distance-based problem characterization and ranking combination methods ",
+journal = "Information Sciences ",
+volume = "301",
+number = "0",
+pages = "181 - 194",
+year = "2015",
+note = "",
+issn = "0020-0255",
+doi = "http://dx.doi.org/10.1016/j.ins.2014.12.044",
+url = "http://www.sciencedirect.com/science/article/pii/S0020025514011967",
+author = "Daniel Gomes Ferrari and Leandro Nunes de Castro",
+keywords = "Clustering",
+keywords = "Problem characterization",
+keywords = "Algorithm ranking",
+keywords = "Algorithm selection",
+keywords = "Meta-knowledge",
+keywords = "Meta-learning systems "
+}
+
+@Article{journals/ijon/GomesPSRC12,
+  title =       "Combining meta-learning and search techniques to
+                 select parameters for support vector machines",
+  author =      "Taciana A. F. Gomes and Ricardo Bastos Cavalcante
+                 Prud{\^e}ncio and Carlos Soares and Andr{\'e} L. D.
+                 Rossi and Andr{\'e} C. P. L. F. Carvalho",
+  journal =     "Neurocomputing",
+  year =        "2012",
+  number =      "1",
+  volume =      "75",
+  bibdate =     "2011-12-08",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/journals/ijon/ijon75.html#GomesPSRC12",
+  pages =       "3--13",
+  URL =         "http://dx.doi.org/10.1016/j.neucom.2011.07.005",
+}
