--- a/classifsFried.tex
+++ b/classifsFried.tex
@@ -6,7 +6,7 @@
 2 - C4.5w	&   & - &   &   &   &   \\ \hline
 3 - CIELM	&   &   & - &   &   &   \\
 4 - ELM  	&   &   &   & - &   &   \\ \hline
-5 - RFw  	&   & . &   & + & - &   \\
+5 - RFw  	& * & + & + & + & - & + \\
 6 - NB   	&   &   &   &   &   & - \\ \hline\end{tabular}
 \label{tab:friedClassif}
 \end{center}
