--- a/classifsTab.tex
+++ b/classifsTab.tex
@@ -2,30 +2,47 @@
 \begin{table}[h]
 \caption{BalancedAcc: O maior valor de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c}
- & 5NN & C4.5w & CIELM & ELM & RFw & NB\\ \hline 1-connect. vowel... & \underline{\textcolor{blue}{\textbf{  0.99}}} &   0.66 &   0.75 &   0.94 & \textcolor{black}{\textbf{  0.96}} & \textcolor{red}{\textbf{  0.62}} \\
-2-first order theore... & \textcolor{black}{\textbf{  0.44}} &   0.39 &   0.39 & \textcolor{red}{\textbf{  0.36}} & \underline{\textcolor{blue}{\textbf{  0.47}}} & \textcolor{red}{\textbf{  0.36}} \\
-3-glass &   0.65 & \textcolor{black}{\textbf{  0.66}} &   0.55 & \textcolor{red}{\textbf{  0.50}} & \underline{\textcolor{blue}{\textbf{  0.75}}} &   0.65 \\
-4-heart disease hung... & \textcolor{red}{\textbf{  0.74}} &   0.76 &   0.78 &   0.78 & \textcolor{black}{\textbf{  0.80}} & \underline{\textcolor{blue}{\textbf{  0.81}}} \\
-5-hill valley withou... &   0.64 & \textcolor{red}{\textbf{  0.50}} & \textcolor{black}{\textbf{  0.65}} & \underline{\textcolor{blue}{\textbf{  0.69}}} &   0.61 & \textcolor{red}{\textbf{  0.50}} \\ \hline
-6-horse colic surgic... & \textcolor{red}{\textbf{  0.74}} & \underline{\textcolor{blue}{\textbf{  0.84}}} &   0.77 &   0.75 & \textcolor{black}{\textbf{  0.83}} &   0.81 \\
-7-indian liver patie... & \textcolor{black}{\textbf{  0.58}} &   0.57 & \textcolor{red}{\textbf{  0.55}} &   0.56 & \textcolor{black}{\textbf{  0.58}} & \underline{\textcolor{blue}{\textbf{  0.67}}} \\
-8-ionosphere &   0.83 & \textcolor{black}{\textbf{  0.88}} &   0.83 & \textcolor{red}{\textbf{  0.81}} & \underline{\textcolor{blue}{\textbf{  0.92}}} &   0.87 \\
-9-iris & \textcolor{blue}{\textbf{  0.96}} &   0.93 & \textcolor{red}{\textbf{  0.92}} & \textcolor{blue}{\textbf{  0.96}} &   0.95 &   0.94 \\
-10-mammographic mass & \textcolor{red}{\textbf{  0.74}} &   0.81 & \textcolor{blue}{\textbf{  0.82}} & \textcolor{blue}{\textbf{  0.82}} &   0.80 & \textcolor{blue}{\textbf{  0.82}} \\ \hline
-11-mfeat fourier & \textcolor{black}{\textbf{  0.80}} & \textcolor{red}{\textbf{  0.75}} & \textcolor{black}{\textbf{  0.80}} &   0.78 & \underline{\textcolor{blue}{\textbf{  0.84}}} &   0.77 \\
-12-monks2 &   0.45 & \underline{\textcolor{blue}{\textbf{  0.50}}} &   0.48 &   0.47 & \textcolor{red}{\textbf{  0.32}} & \textcolor{black}{\textbf{  0.49}} \\
-13-movement libras 10 & \underline{\textcolor{blue}{\textbf{  0.86}}} & \textcolor{red}{\textbf{  0.50}} &   0.77 &   0.72 & \textcolor{black}{\textbf{  0.79}} &   0.63 \\
-14-pima indians diabe... & \textcolor{red}{\textbf{  0.66}} &   0.71 & \textcolor{blue}{\textbf{  0.73}} &   0.72 & \textcolor{blue}{\textbf{  0.73}} & \textcolor{blue}{\textbf{  0.73}} \\
-15-robot failure lp5 &   0.60 &   0.55 &   0.43 & \textcolor{red}{\textbf{  0.34}} & \textcolor{black}{\textbf{  0.67}} & \underline{\textcolor{blue}{\textbf{  0.70}}} \\ \hline
-16-robot nav sensor r... &   0.98 & \textcolor{blue}{\textbf{  1.00}} & \textcolor{red}{\textbf{  0.86}} &   0.87 & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} \\
-17-semeion & \textcolor{black}{\textbf{  0.91}} & \textcolor{red}{\textbf{  0.71}} &   0.85 &   0.82 & \underline{\textcolor{blue}{\textbf{  0.94}}} &   0.85 \\
-18-statlog heart & \textcolor{red}{\textbf{  0.75}} &   0.77 & \underline{\textcolor{blue}{\textbf{  0.83}}} &   0.81 &   0.81 & \textcolor{black}{\textbf{  0.82}} \\
-19-statlog landsat sa... & \textcolor{blue}{\textbf{  0.89}} & \textcolor{red}{\textbf{  0.82}} &   0.85 &   0.86 & \textcolor{blue}{\textbf{  0.89}} & \textcolor{red}{\textbf{  0.82}} \\
-20-thyroid hypothyroi... & \textcolor{red}{\textbf{  0.78}} & \textcolor{blue}{\textbf{  0.96}} &   0.82 &   0.84 &   0.93 & \textcolor{blue}{\textbf{  0.96}} \\ \hline
-21-thyroid sick euthy... &   0.77 & \underline{\textcolor{blue}{\textbf{  0.93}}} & \textcolor{red}{\textbf{  0.69}} &   0.72 & \textcolor{black}{\textbf{  0.92}} & \textcolor{black}{\textbf{  0.92}} \\
-22-tic tac toe & \underline{\textcolor{blue}{\textbf{  0.98}}} &   0.78 & \textcolor{black}{\textbf{  0.95}} & \textcolor{black}{\textbf{  0.95}} &   0.94 & \textcolor{red}{\textbf{  0.63}} \\
-23-twonorm &   0.95 & \textcolor{red}{\textbf{  0.84}} & \underline{\textcolor{blue}{\textbf{  0.98}}} & \textcolor{black}{\textbf{  0.97}} & \textcolor{black}{\textbf{  0.97}} & \textcolor{black}{\textbf{  0.97}} \\
-24-volcanoes a3 & \underline{\textcolor{blue}{\textbf{  0.34}}} &   0.30 &   0.28 &   0.27 & \textcolor{black}{\textbf{  0.33}} & \textcolor{red}{\textbf{  0.22}} \\
-25-wilt &   0.67 & \textcolor{black}{\textbf{  0.89}} &   0.57 &   0.81 & \underline{\textcolor{blue}{\textbf{  0.90}}} & \textcolor{red}{\textbf{  0.50}} \\ \hline\end{tabular}\label{tab:balaccClassif0}
+ & 5NN & C4.5w & CIELM & ELM & RFw & NB\\ \hline 1-abalone 3class & \textcolor{red}{\textbf{  0.58}} &   0.62 & \textcolor{blue}{\textbf{  0.66}} & \textcolor{blue}{\textbf{  0.66}} &   0.64 & \textcolor{red}{\textbf{  0.58}} \\
+2-autoUniv au7 300 d... &   0.31 & \textcolor{black}{\textbf{  0.38}} &   0.33 &   0.32 & \underline{\textcolor{blue}{\textbf{  0.40}}} & \textcolor{red}{\textbf{  0.30}} \\
+3-connect. vowel... & \underline{\textcolor{blue}{\textbf{  0.99}}} &   0.66 &   0.75 &   0.94 & \textcolor{black}{\textbf{  0.96}} & \textcolor{red}{\textbf{  0.62}} \\
+4-dbworld subjects &   0.79 &   0.83 &   0.65 & \textcolor{red}{\textbf{  0.51}} & \underline{\textcolor{blue}{\textbf{  0.87}}} & \textcolor{black}{\textbf{  0.84}} \\
+5-first order theore... & \textcolor{black}{\textbf{  0.44}} &   0.39 &   0.39 & \textcolor{red}{\textbf{  0.36}} & \underline{\textcolor{blue}{\textbf{  0.47}}} & \textcolor{red}{\textbf{  0.36}} \\ \hline
+6-glass &   0.65 & \textcolor{black}{\textbf{  0.66}} &   0.55 & \textcolor{red}{\textbf{  0.50}} & \underline{\textcolor{blue}{\textbf{  0.75}}} &   0.65 \\
+7-habermans survival &   0.55 & \textcolor{black}{\textbf{  0.57}} & \underline{\textcolor{blue}{\textbf{  0.58}}} & \textcolor{black}{\textbf{  0.57}} & \textcolor{black}{\textbf{  0.57}} & \textcolor{red}{\textbf{  0.53}} \\
+8-heart disease hung... & \textcolor{red}{\textbf{  0.74}} &   0.76 &   0.78 &   0.78 & \textcolor{black}{\textbf{  0.80}} & \underline{\textcolor{blue}{\textbf{  0.81}}} \\
+9-hill valley withou... &   0.64 & \textcolor{red}{\textbf{  0.50}} & \textcolor{black}{\textbf{  0.65}} & \underline{\textcolor{blue}{\textbf{  0.69}}} &   0.61 & \textcolor{red}{\textbf{  0.50}} \\
+10-horse colic surgic... & \textcolor{red}{\textbf{  0.74}} & \underline{\textcolor{blue}{\textbf{  0.84}}} &   0.77 &   0.75 & \textcolor{black}{\textbf{  0.83}} &   0.81 \\ \hline
+11-indian liver patie... & \textcolor{black}{\textbf{  0.58}} &   0.57 & \textcolor{red}{\textbf{  0.55}} &   0.56 & \textcolor{black}{\textbf{  0.58}} & \underline{\textcolor{blue}{\textbf{  0.67}}} \\
+12-ionosphere &   0.83 & \textcolor{black}{\textbf{  0.88}} &   0.83 & \textcolor{red}{\textbf{  0.81}} & \underline{\textcolor{blue}{\textbf{  0.92}}} &   0.87 \\
+13-iris & \textcolor{blue}{\textbf{  0.96}} &   0.93 & \textcolor{red}{\textbf{  0.92}} & \textcolor{blue}{\textbf{  0.96}} &   0.95 &   0.94 \\
+14-mammographic mass & \textcolor{red}{\textbf{  0.74}} &   0.81 & \textcolor{blue}{\textbf{  0.82}} & \textcolor{blue}{\textbf{  0.82}} &   0.80 & \textcolor{blue}{\textbf{  0.82}} \\
+15-mfeat fourier & \textcolor{black}{\textbf{  0.80}} & \textcolor{red}{\textbf{  0.75}} & \textcolor{black}{\textbf{  0.80}} &   0.78 & \underline{\textcolor{blue}{\textbf{  0.84}}} &   0.77 \\ \hline
+16-monks2 &   0.45 & \underline{\textcolor{blue}{\textbf{  0.50}}} &   0.48 &   0.47 & \textcolor{red}{\textbf{  0.32}} & \textcolor{black}{\textbf{  0.49}} \\
+17-movement libras 10 & \underline{\textcolor{blue}{\textbf{  0.86}}} & \textcolor{red}{\textbf{  0.50}} &   0.77 &   0.72 & \textcolor{black}{\textbf{  0.79}} &   0.63 \\
+18-parkinsons & \underline{\textcolor{blue}{\textbf{  0.95}}} &   0.79 & \textcolor{red}{\textbf{  0.76}} &   0.79 & \textcolor{black}{\textbf{  0.85}} &   0.79 \\
+19-pima indians diabe... & \textcolor{red}{\textbf{  0.66}} &   0.71 & \textcolor{blue}{\textbf{  0.73}} &   0.72 & \textcolor{blue}{\textbf{  0.73}} & \textcolor{blue}{\textbf{  0.73}} \\
+20-robot failure lp5 &   0.60 &   0.55 &   0.43 & \textcolor{red}{\textbf{  0.34}} & \textcolor{black}{\textbf{  0.67}} & \underline{\textcolor{blue}{\textbf{  0.70}}} \\ \hline
+21-robot nav sensor r... &   0.98 & \textcolor{blue}{\textbf{  1.00}} & \textcolor{red}{\textbf{  0.86}} &   0.87 & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} \\
+22-semeion & \textcolor{black}{\textbf{  0.91}} & \textcolor{red}{\textbf{  0.71}} &   0.85 &   0.82 & \underline{\textcolor{blue}{\textbf{  0.94}}} &   0.85 \\
+23-spambase & \textcolor{red}{\textbf{  0.89}} & \textcolor{black}{\textbf{  0.92}} & \textcolor{black}{\textbf{  0.92}} &   0.91 & \underline{\textcolor{blue}{\textbf{  0.95}}} & \textcolor{red}{\textbf{  0.89}} \\
+24-spectf heart & \textcolor{red}{\textbf{  0.58}} &   0.61 & \textcolor{black}{\textbf{  0.63}} & \textcolor{black}{\textbf{  0.63}} &   0.59 & \underline{\textcolor{blue}{\textbf{  0.73}}} \\
+25-statlog australian... & \textcolor{red}{\textbf{  0.80}} &   0.85 & \textcolor{black}{\textbf{  0.86}} & \textcolor{black}{\textbf{  0.86}} & \underline{\textcolor{blue}{\textbf{  0.87}}} &   0.85 \\ \hline
+26-statlog german cre... & \textcolor{red}{\textbf{  0.61}} &   0.63 & \textcolor{blue}{\textbf{  0.68}} & \textcolor{blue}{\textbf{  0.68}} &   0.67 &   0.63 \\
+27-statlog heart & \textcolor{red}{\textbf{  0.75}} &   0.77 & \underline{\textcolor{blue}{\textbf{  0.83}}} &   0.81 &   0.81 & \textcolor{black}{\textbf{  0.82}} \\
+28-statlog landsat sa... & \textcolor{blue}{\textbf{  0.89}} & \textcolor{red}{\textbf{  0.82}} &   0.85 &   0.86 & \textcolor{blue}{\textbf{  0.89}} & \textcolor{red}{\textbf{  0.82}} \\
+29-thyroid ann &   0.60 & \underline{\textcolor{blue}{\textbf{  1.00}}} & \textcolor{red}{\textbf{  0.59}} &   0.61 & \textcolor{black}{\textbf{  0.99}} &   0.93 \\
+30-thyroid hypothyroi... & \textcolor{red}{\textbf{  0.78}} & \textcolor{blue}{\textbf{  0.96}} &   0.82 &   0.84 &   0.93 & \textcolor{blue}{\textbf{  0.96}} \\ \hline
+31-thyroid sick euthy... &   0.77 & \underline{\textcolor{blue}{\textbf{  0.93}}} & \textcolor{red}{\textbf{  0.69}} &   0.72 & \textcolor{black}{\textbf{  0.92}} & \textcolor{black}{\textbf{  0.92}} \\
+32-tic tac toe & \underline{\textcolor{blue}{\textbf{  0.98}}} &   0.78 & \textcolor{black}{\textbf{  0.95}} & \textcolor{black}{\textbf{  0.95}} &   0.94 & \textcolor{red}{\textbf{  0.63}} \\
+33-twonorm &   0.95 & \textcolor{red}{\textbf{  0.84}} & \underline{\textcolor{blue}{\textbf{  0.98}}} & \textcolor{black}{\textbf{  0.97}} & \textcolor{black}{\textbf{  0.97}} & \textcolor{black}{\textbf{  0.97}} \\\end{tabular}\label{tab:balaccClassif0}
+\end{center}
+\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\begin{table}[h]
+\caption{BalancedAcc: O maior valor de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Apenas negrito indica segundo melhor valor.}
+\begin{center}\begin{tabular}{lc|c|c|c|c|c}
+ & 5NN & C4.5w & CIELM & ELM & RFw & NB\\ \hline 34-user knowledge &   0.67 & \textcolor{black}{\textbf{  0.78}} & \textcolor{red}{\textbf{  0.52}} &   0.63 & \underline{\textcolor{blue}{\textbf{  0.80}}} &   0.70 \\
+35-volcanoes a3 & \underline{\textcolor{blue}{\textbf{  0.34}}} &   0.30 &   0.28 &   0.27 & \textcolor{black}{\textbf{  0.33}} & \textcolor{red}{\textbf{  0.22}} \\
+36-volcanoes e2 & \underline{\textcolor{blue}{\textbf{  0.25}}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{black}{\textbf{  0.23}} & \textcolor{red}{\textbf{  0.20}} \\
+37-wilt &   0.67 & \textcolor{black}{\textbf{  0.89}} &   0.57 &   0.81 & \underline{\textcolor{blue}{\textbf{  0.90}}} & \textcolor{red}{\textbf{  0.50}} \\\end{tabular}\label{tab:balaccClassif1}
 \end{center}
 \end{table}
