--- a/exp-analise.tex
+++ b/exp-analise.tex
@@ -138,19 +138,17 @@ As tabelas \ref{stratsALCKappaFriedCIELMRedux},
 contêm o resultado da comparação de todas as estratégias entre si para
 os algoritmos CIELM, 5NN, C4.5, NB, VFDT e SVM respectivamente \ano{RF?}.
 
-% \input stratsALCKappaFriedCIELMRedux
-% 
-% \input stratsALCKappaFried5NNRedux
-% 
-% \input stratsALCKappaFriedC4.5Redux
-% 
-% \input stratsALCKappaFriedNBRedux
-% 
-% \input stratsALCKappaFriedVFDTRedux
-% 
-% \input stratsALCKappaFriedSVMRedux
+\input stratsALCKappaFriedELMRedux
 
-\input stratsALCKappaFriedRFRedux
+\input stratsALCKappaFriedCIELMRedux
+
+\input stratsALCKappaFried5NNRedux
+
+\input stratsALCKappaFriedC4.5wRedux
+
+\input stratsALCKappaFriedNBRedux
+
+\input stratsALCKappaFriedRFwRedux
 
 É possível observar nas seis tabelas uma mudança significativa na distribuição das marcas de
 superioridade estatística.
