--- a/introducao.tex
+++ b/introducao.tex
@@ -61,6 +61,7 @@ Essa preferência foi reportada numa competição de aprendizado ativo,
 onde também prevaleceu a ausência de estratégias possivelmente mais efetivas
 como as baseadas em densidade conforme
 Figura \ref{compet}.
+\ano{é mesmo mais efetiva? por quê?}
 \begin{figure}
 \caption{Frequência de uso de estratégias na competição de aprendizado ativo
 (alguns participantes adotaram mais de uma estratégia).
@@ -153,6 +154,7 @@ Especificamente, há as seguintes restrições de escopo:
  \item custos uniformes;
  \item oráculo único e consistente (sempre a mesma resposta para um mesmo ex.);
  \item atributos sem valores faltantes;
+ \item os domínios dos atributos nominais são previamente conhecidos;
  \item consulta \ing{um a um}{on-line}.
 \end{itemize}
 
