--- a/stratsALCKappaFriedCIELMRedux.tex
+++ b/stratsALCKappaFriedCIELMRedux.tex
@@ -7,10 +7,10 @@
 3 - Mar  	& * & * & - & * & * & * &   & . &   &   \\
 4 - EERent	&   &   &   & - &   &   &   &   &   &   \\ \hline
 5 - EERacu	&   &   &   &   & - &   &   &   &   &   \\
-6 - \textbf{SGmulti}	&   &   &   & + &   & - &   &   &   &   \\ \hline
-7 - TUman	& * & * &   & * & * & * & - & + &   &   \\
-8 - \textbf{ATUman}	& . & . &   & * &   &   &   & - &   &   \\ \hline
-9 - TUmah	& * & * &   & * & * & * &   & . & - &   \\
+6 - \textbf{SGmulti}	&   & . &   & * &   & - &   &   &   &   \\ \hline
+7 - TUman	& * & * &   & * & * & * & - & * &   & . \\
+8 - \textbf{ATUman}	& * & * &   & * & * &   &   & - &   &   \\ \hline
+9 - TUmah	& * & * &   & * & * & * &   & * & - & + \\
 10 - \textbf{ATUmah}	& * & * &   & * & * &   &   &   &   & - \\ \hline\end{tabular}
 \label{stratsALCKappaFriedCIELMRedux}
 \end{center}
