--- a/stratsALCKappaFriedNBRedux.tex
+++ b/stratsALCKappaFriedNBRedux.tex
@@ -5,11 +5,11 @@
 1 - Rnd  	& - &   &   &   &   &   &   &   &   &   \\
 2 - Clu  	&   & - &   &   &   &   &   &   &   &   \\ \hline
 3 - Mar  	&   &   & - &   &   &   &   &   &   &   \\
-4 - EERent	& * & * &   & - & + &   &   &   & * & + \\ \hline
+4 - EERent	& * & * & * & - & * &   &   &   & * & * \\ \hline
 5 - EERacu	&   &   &   &   & - &   &   &   &   &   \\
-6 - \textbf{SGmulti}	&   &   &   &   &   & - &   &   &   &   \\ \hline
-7 - TUman	&   &   &   &   &   &   & - &   &   &   \\
-8 - \textbf{ATUman}	& + &   &   &   &   &   &   & - & + &   \\ \hline
+6 - \textbf{SGmulti}	& + &   &   &   &   & - &   &   &   &   \\ \hline
+7 - TUman	& * & . &   &   & . &   & - &   & . &   \\
+8 - \textbf{ATUman}	& + &   &   &   &   &   &   & - &   &   \\ \hline
 9 - TUmah	&   &   &   &   &   &   &   &   & - &   \\
 10 - \textbf{ATUmah}	&   &   &   &   &   &   &   &   &   & - \\ \hline\end{tabular}
 \label{stratsALCKappaFriedNBRedux}
