--- a/tese.tex
+++ b/tese.tex
@@ -11,6 +11,14 @@
 
 \DeclareMathOperator*{\argmax}{arg\,max}
 \DeclareMathOperator*{\argmin}{arg\,min}
+\DeclareMathOperator*{\sk}{sk}
+\DeclareMathOperator*{\ku}{ku}
+\DeclareMathOperator*{\val}{val}
+\DeclareMathOperator*{\nom}{nom}
+\DeclareMathOperator*{\av}{av}
+\DeclareMathOperator*{\sd}{sd}
+\DeclareMathOperator*{\en}{en}
+\DeclareMathOperator*{\co}{co}
 
 \newcommand{\meutitulo}{Aprendizado ativo ... }
 \newcommand{\meunome}{Davi Pereira dos Santos}
