--- a/stratsALCKappaFried5NNRedux.tex
+++ b/stratsALCKappaFried5NNRedux.tex
@@ -2,16 +2,16 @@
 \caption{Um contra um (5NN). Medida: ALCKappa. \textit{Legenda na Tabela \ref{tab:friedClassif}.}}
 \begin{center}\begin{tabular}{lcc|cc|cc|cc|cc}
  			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10\\
-1 - Rnd  	& - &   &   &   &   &   &   &   &   &   \\
-2 - Clu  	&   & - & + &   & * &   &   &   &   &   \\ \hline
+1 - Rnd  	& - &   &   &   & . &   &   &   &   &   \\
+2 - Clu  	&   & - &   &   & * &   &   &   &   &   \\ \hline
 3 - Mar  	&   &   & - &   &   &   &   &   &   &   \\
-4 - EERent	& . &   & * & - & * & . & . &   & . &   \\ \hline
+4 - EERent	& * & + & * & - & * & * & . &   & + &   \\ \hline
 5 - EERacu	&   &   &   &   & - &   &   &   &   &   \\
-6 - \textbf{SGmulti}	&   &   &   &   &   & - &   &   &   &   \\ \hline
-7 - TUman	&   &   &   &   &   &   & - &   &   &   \\
-8 - \textbf{ATUman}	& * &   & * &   & * & * & * & - & + &   \\ \hline
-9 - TUmah	&   &   &   &   &   &   &   &   & - &   \\
-10 - \textbf{ATUmah}	&   &   & * &   & * &   &   &   &   & - \\ \hline\end{tabular}
+6 - \textbf{SGmulti}	&   &   &   &   & . & - &   &   &   &   \\ \hline
+7 - TUman	&   &   &   &   & * &   & - &   &   &   \\
+8 - \textbf{ATUman}	& * & * & * &   & * & * & * & - & * &   \\ \hline
+9 - TUmah	&   &   &   &   & * &   &   &   & - &   \\
+10 - \textbf{ATUmah}	& * & + & * &   & * & * & + &   & + & - \\ \hline\end{tabular}
 \label{stratsALCKappaFried5NNRedux}
 \end{center}
 \end{table}
