--- a/stratsALCKappaFriedC4.5wRedux.tex
+++ b/stratsALCKappaFriedC4.5wRedux.tex
@@ -4,14 +4,14 @@
  			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10\\
 1 - Rnd  	& - &   &   &   &   &   &   &   &   &   \\
 2 - Clu  	& + & - &   &   &   &   &   &   &   &   \\ \hline
-3 - Mar  	&   &   & - &   &   &   &   &   &   &   \\
-4 - EERent	& * & + & * & - & * & * &   &   &   & . \\ \hline
+3 - Mar  	& + &   & - &   &   &   &   &   &   &   \\
+4 - EERent	& * & * & * & - & * & * &   &   &   &   \\ \hline
 5 - EERacu	& + &   &   &   & - &   &   &   &   &   \\
 6 - \textbf{SGmulti}	&   &   &   &   &   & - &   &   &   &   \\ \hline
-7 - TUman	& * &   & + &   &   & + & - &   &   &   \\
-8 - \textbf{ATUman}	& * &   & + &   &   & + &   & - &   &   \\ \hline
-9 - TUmah	& * &   &   &   &   &   &   &   & - &   \\
-10 - \textbf{ATUmah}	& * &   &   &   &   &   &   &   &   & - \\ \hline\end{tabular}
+7 - TUman	& * & * & + &   & + & * & - &   &   &   \\
+8 - \textbf{ATUman}	& * & * & * &   & + & * &   & - &   &   \\ \hline
+9 - TUmah	& * & + & + &   & . & * &   &   & - &   \\
+10 - \textbf{ATUmah}	& * &   &   &   &   & + &   &   &   & - \\ \hline\end{tabular}
 \label{stratsALCKappaFriedC4.5wRedux}
 \end{center}
 \end{table}
